src/test/resources/automata/cocos/invalid/NonDeterministicAutomaton.aut
/* (c) https://github.com/MontiCore/monticore */

automaton NonDeterministicAutomaton {

  state A <<initial>>;
  state B <<final>>;
  state C;

  A - b > B;
  A - b > C;
}